Fix focus command deck selector scope

--- a/index.html
+++ b/index.html
@@ -17042,7 +17042,7 @@ initializeFocusFabLongPress();
   </script>
     <script>
   (function () {
-    const root = document.querySelector('#focus.focus-overlay .focus-command-deck');
+    const root = document.querySelector('.focus-command-deck');
     if (!root) return;
 
     const fill = root.querySelector('.cm-fill');
