Ensure next best results remain scrollable

--- a/index.html
+++ b/index.html
@@ -4957,6 +4957,7 @@
     }
 
     .next-best-results {
+      position: relative;
       display: flex;
       gap: var(--space-2);
       overflow-x: auto;
@@ -4964,6 +4965,18 @@
       padding-bottom: 0.35rem;
       margin: 0 -0.25rem;
       padding-left: 0.25rem;
+      padding-right: clamp(1.25rem, 4vw, 2.5rem);
+    }
+
+    .next-best-results::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: clamp(1.5rem, 6vw, 3rem);
+      height: 100%;
+      pointer-events: none;
+      background: linear-gradient(90deg, rgba(12, 17, 23, 0), rgba(12, 17, 23, 0.88));
     }
 
     .next-best-results::-webkit-scrollbar {
@@ -4977,16 +4990,22 @@
 
     @media (min-width: 960px) {
       .next-best-results {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-        overflow: visible;
+        display: flex;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        gap: var(--space-3, 1.25rem);
         margin: 0;
-        padding: 0;
+        padding: 0 0 clamp(0.5rem, 2vw, 0.75rem);
+      }
+
+      .next-best-results::after {
+        width: clamp(2rem, 6vw, 3.5rem);
+        background: linear-gradient(90deg, rgba(12, 17, 23, 0), rgba(12, 17, 23, 0.92));
       }
 
       .next-best-option {
-        min-width: 0;
-        scroll-snap-align: unset;
+        min-width: clamp(240px, 32vw, 320px);
+        scroll-snap-align: center;
       }
     }
 
