--- a/index.html
+++ b/index.html
@@ -5631,6 +5631,72 @@
   color: #8fa5ff;
   margin: 0.25rem 0 0;
 }
+    /* Task Focus Title Block */
+.task-header {
+  background: linear-gradient(120deg, rgba(20, 28, 36, 0.9), rgba(12, 16, 22, 0.8));
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  border-radius: 14px;
+  padding: 1rem 1.25rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
+  position: relative;
+}
+
+/* Title text */
+.task-header h1 {
+  font-size: 1.65rem;
+  font-weight: 700;
+  letter-spacing: 0.02em;
+  color: #e8f5ff;
+  background: linear-gradient(90deg, #7bd88f, #2dd4c3);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 0.35rem;
+}
+
+/* Date line (today + cutoff) */
+.task-header .date-line {
+  font-size: 0.95rem;
+  color: #aeb7c8;
+}
+
+/* Red cutoff badge restored */
+.task-header .cutoff-badge {
+  background: rgba(255, 75, 75, 0.15);
+  color: #ff6b6b;
+  border: 1px solid rgba(255, 75, 75, 0.3);
+  border-radius: 999px;
+  padding: 0.25rem 0.65rem;
+  font-weight: 600;
+  margin-left: 0.5rem;
+  animation: pulse-red 3s infinite ease-in-out;
+}
+
+/* Gentle pulsing animation */
+@keyframes pulse-red {
+  0%, 100% { box-shadow: 0 0 0 0 rgba(255, 107, 107, 0.35); }
+  50% { box-shadow: 0 0 8px 2px rgba(255, 107, 107, 0.45); }
+}
+
+/* Subtle underline “momentum loader” */
+.task-header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background: linear-gradient(90deg, #2dd4c3, #7bd88f, #2dd4c3);
+  opacity: 0.85;
+  animation: slide-glow 6s linear infinite;
+  border-radius: 3px;
+}
+
+@keyframes slide-glow {
+  from { background-position: 0 0; }
+  to { background-position: 200% 0; }
+}
   </style>
 </head>
 <body>
@@ -17168,6 +17234,7 @@ initializeFocusFabLongPress();
     </script>
 </body>
 </html>
+
 
 
 
