Update branding to Tasker 5000

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Task Focus</title>
+  <title>Tasker 5000</title>
   <style>
     :root {
       --hero-teal: #2dd4c3;
@@ -5742,7 +5742,7 @@
   color: #8fa5ff;
   margin: 0.25rem 0 0;
 }
-    /* Task Focus Title Block */
+    /* Tasker 5000 Title Block */
 /* --- TASK FOCUS HEADER --- */
 .app-header {
   background: linear-gradient(120deg, rgba(20, 28, 36, 0.9), rgba(12, 16, 22, 0.85));
@@ -5836,7 +5836,7 @@
     <div class="app-shell">
       <header class="app-header">
         <div class="app-header__title">
-          <h1>Task Focus</h1>
+          <h1>Tasker 5000</h1>
           <p id="headerSubtitle" class="app-header__subtitle"></p>
         </div>
         <p class="billing-reminder" id="billingReminder"></p>
